# linux-comon

./: .gitignore
common/utils/: CMakeLists.txt  types.h
common/utils/debug/: debug.c  debug.h
common/utils/gpio/: gpio.c  gpio.h
common/utils/network/: netip.c  netip.h  ping.c  ping.h
common/utils/rf/: rf_common.c  rf_common.h  rf_lynq.c  rf_lynq.h  rf_quectel.c  rf_quectel.h
common/utils/threads/: thread.c  thread.h
common/utils/utest/: utest.c  utest.h
project/SmartCam/: CMakeLists.txt  build.sh  toolchain
project/SmartCam/app/: CMakeLists.txt  alg.c  gstreamer_pipe.c  gstreamer_pipe.h  ringbuffer.c  ringbuffer.h  tcp_server.c  video.c  video.h  video_daemon.c
project/SmartCam/app/command/: CMakeLists.txt  command_parser.c  command_parser.h  sensor_handle.c  socket_server.c  system_handle.c  video_handler.c
project/SmartCam/module/: CMakeLists.txt
project/SmartCam/module/include/: do.h  i2c_rw.h  led.h  mvcam.h  mvcam_register.h  strfunc.h  sys_rw.h
project/SmartCam/module/mv_tools_rockchip/i2c_tools/: mv_mipi_i2c_new.sh
project/SmartCam/module/src/: do.c  i2c_rw.c  led.c  mvcam.c  strfunc.c  sys_rw.c
project/SmartCam/test/: CMakeLists.txt  do_test.c  gstreaming.c  gstreamr_test.c  led_test.c  rs485_test  rs485_test.c  sensor_test.c  test_set_framerate.py  video_server  video_server.c
project/elec/: CMakeLists.txt  build.sh
project/elec/module/: CMakeLists.txt
project/elec/module/include/: ModParam.h  im3332.h  led.h  mqtt.h
project/elec/module/src/: ModParam.c  im3332.c  led.c  mqtt.c
project/elec/test/: CMakeLists.txt  eth_test.c  im3332_test.c  led_test.c  rf_test.c  unit_test.c
project/elec/toolchain/: CrossCompile_t507.cmake
project/iot-gw/: 4G_call.sh  CMakeLists.txt  build.sh  install.sh
project/iot-gw/app/: CMakeLists.txt  board_srv.c  iot_client.c  iot_daemon.c  iot_daemon.h  mount_sd.c  rf_daemon.c  sd.c  sd_log.c  test.c
project/iot-gw/module/: CMakeLists.txt
project/iot-gw/module/include/: led.h  rf.h
project/iot-gw/module/src/: ai.c  di.c  do.c  rf.c  rs485.c  rtc.c
project/iot-gw/test/: CMakeLists.txt  ai_test.c  build_mb.sh  di_test.c  eth_test.c  led_test.c  mb_test  mb_test.cpp  mb_test_mul  mb_test_mul.cpp  rf_test.c  rs422_test.c  rs485_solution_1.c  rs485_solution_2.c  rs485_solution_3.c  rs485_test.c  rtc_test.c  sensor_rs485.c  unit_test.c
project/iot-gw/toolchain/: CrossCompile_imx8m.cmake  CrossCompile_t113.cmake
project/iscanner100/: CMakeLists.txt  build.sh
project/iscanner100/module/include/: led.h  ssi.h
project/iscanner100/module/src/: led.c  ssi.c
project/iscanner100/test/: CMakeLists.txt  can_test.c  eth_test.c  led_test.c  rs422_test.c  rtc_test.c  ssi_test.c  unit_test.c
toolchain/: CrossCompile_imx8m.cmake  CrossCompile_rk3576.cmake  CrossCompile_rk3576_ubuntu.cmake  CrossCompile_t507.cmake
