set(TARGET_NAME "utils")

file(GLOB_RECURSE LIB_SRC_C_FILE "./*.c")
file(GLOB_RECURSE LIB_SRC_CPP_FILE "./*.cpp")
set(LIB_SRC_FILE ${LIB_SRC_C_FILE} ${LIB_SRC_CPP_FILE})
message("LIB_SRC_FILE=${LIB_SRC_FILE}")
string(APPEND CMAKE_C_FLAGS ${CMAKE_SHARED_LIBRARY_C_FLAGS})
add_library(${TARGET_NAME} SHARED ${LIB_SRC_FILE})
