set(TARGET_NAME "utils")

file(GLOB_RECURSE LIB_SRC_C_FILE "./*.c")
file(GLOB_RECURSE LIB_SRC_CPP_FILE "./*.cpp")
set(LIB_SRC_FILE ${LIB_SRC_C_FILE} ${LIB_SRC_CPP_FILE})
if("${TARGET_BOARD}" MATCHES "t113")
    add_definitions(-DPROJECT_IOT_GATEWAY)
else()
    if("${TARGET_BOARD}" MATCHES "t507")
        add_definitions(-DPROJECT_ELEC)   
    else()
        if("${TARGET_BOARD}" MATCHES "imx8m")
            add_definitions(-DPROJECT_ISCANNER)
        else()
            add_definitions(-DPROJECT_ELEC)
        endif()
    endif()
endif()
message("LIB_SRC_FILE=${LIB_SRC_FILE}")
string(APPEND CMAKE_C_FLAGS ${CMAKE_SHARED_LIBRARY_C_FLAGS})
# add_definitions(-DTARGET_BOARD=${TARGET_BOARD})
add_library(${TARGET_NAME} SHARED ${LIB_SRC_FILE})
